cleanup build script